--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.5.0"
+  },
+  "type": "module",
+  "scripts": {
+    "start": "node --watch server.js"
   }
 }
