--- a/tdd/package.json
+++ b/tdd/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.8",
     "supertest": "^6.3.4"
   },
   "dependencies": {
