updated environment variables

--- a/.github/workflows/aws-ecs-deploy.yaml
+++ b/.github/workflows/aws-ecs-deploy.yaml
@@ -32,9 +32,9 @@ on:
   push:
     branches: [ "main" ]
 
-env:
-  ECS_TASK_DEFINITION: "./aws/ecs-task.json"  # set this to the path to your Amazon ECS task definition
-                                              # file, e.g. .aws/task-definition.json
+# env:
+#   ECS_TASK_DEFINITION: "./aws/ecs-task.json"  # set this to the path to your Amazon ECS task definition
+#                                               # file, e.g. .aws/task-definition.json
 
 permissions:
   contents: read
@@ -43,7 +43,6 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
     - name: Checkout
