--- a/.github/workflows/aws-ecs-deploy.yaml
+++ b/.github/workflows/aws-ecs-deploy.yaml
@@ -32,9 +32,9 @@ on:
   push:
     branches: [ "main" ]
 
-# env:
-#   ECS_TASK_DEFINITION: "./aws/ecs-task.json"  # set this to the path to your Amazon ECS task definition
-#                                               # file, e.g. .aws/task-definition.json
+env:
+  ECS_TASK_DEFINITION: "./aws/ecs-task.json"  # set this to the path to your Amazon ECS task definition
+                                              # file, e.g. .aws/task-definition.json
 
 permissions:
   contents: read
@@ -53,7 +53,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+        aws-region: ${{ vars.AWS_REGION }}
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -77,13 +77,13 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
-        container-name: ${{ env.CONTAINER_NAME }}
+        container-name: ${{ vars.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
-        cluster: ${{ env.ECS_CLUSTER }}
+        service: ${{ vars.ECS_SERVICE }}
+        cluster: ${{ vars.ECS_CLUSTER }}
         wait-for-service-stability: true
