--- a/docker/package.json
+++ b/docker/package.json
@@ -4,7 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "winston": "^3.13.0"
   },
   "type": "module",
   "scripts": {
